sumo/tests/sumo/errors/wauts/cross3ltl_error_missing_switchtime/errors.sumo
Error: Missing switch time for WAUT 'w1'.
Quitting (on error).
